# resume-mcp

./: .env  .env.example  .gitignore  ADK_INTEGRATION_COMPLETE.md  ADK_USAGE_GUIDE.md  Dockerfile  PROJECT_COMPLETE.md  README.md  USAGE.md  adk_main.py  adk_main_fixed.py  claude-plugin-config.json  debug_sections.py  final_demo.py  main.py  mcp-servers.json  package.json  pyproject.toml  requirements.txt  resume_mcp.db  run.py  run_server.py  run_tests.bat  setup.py  test_adk_integration.py  test_adk_quick.py  test_complete_functionality.py  test_complete_functionality_fixed.py  test_final_mcp.py  test_google_api.py  test_mcp_agent.py  test_mcp_agent_fixed.py  test_mcp_server.py  test_mcp_tools.py  test_mock_agent.py  test_simple_matching.py
.github/workflows/: ci-cd.yml
agents/resume-analysis/: __init__.py  agent.py
agents/resume_analysis/: __init__.py  agent.py  agent_mock.py
examples/: sample_data.py  usage_examples.py
src/: __init__.py  ai_agent.py  analyzer.py  config.py  main.py  models.py  parser.py  server.py  utils.py
src/resume_mcp/: __init__.py  claude_formatter.py  claude_integration.py  config.py  generate_logo.py  mcp_server.py  mcp_types.py  prompts.py  resume_analyzer.py  resume_analyzer.py.bak  server.py  static_routes.py  utils.py
src/resume_mcp/analyzers/: __init__.py  job_analyzer.py  job_analyzer_fixed.py  resume_analyzer.py  resume_matcher.py  resume_matcher_fixed.py  resume_matcher_old.py
src/resume_mcp/models/: __init__.py  schemas.py
src/resume_mcp/storage/: __init__.py  storage_manager_fixed.py  storage_manager_old.py
src/resume_mcp/ui/: index.html
src/resume_mcp/utils/: __init__.py  file_processor.py
tests/: __init__.py  test_mcp_server.py  test_resume_analysis.py  test_resume_analyzer.py
