[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-mcp-agent"
version = "0.1.0"
description = "MCP server for AI-powered resume analysis and sorting"
authors = [{name = "Resume MCP Agent", email = "agent@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.2",
    "nltk>=3.8.1",
    "textstat>=0.7.3",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.23.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "google-cloud-aiplatform>=1.38.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
resume-mcp = "resume_mcp.server:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
